# sdl2-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SDL2-Template.sln  SDL2-Template.vcxproj  sdl2-template.cpp
